crates/cairn-idl/tests/snapshots/wire_compat_v1__file__extensions_registry_json.snap
---
source: crates/cairn-idl/tests/wire_compat_v1.rs
expression: body
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$id": "https://cairn.dev/schema/cairn.mcp.v1/extensions/registry.json",
  "title": "Cairn extension namespace registry",
  "x-cairn-contract": "cairn.mcp.v1",
  "type": "object",
  "additionalProperties": false,
  "required": ["namespaces"],
  "properties": {
    "namespaces": {
      "type": "array",
      "items": { "$ref": "#/$defs/namespace" }
    }
  },
  "$defs": {
    "namespace": {
      "description": "One of the four registered extension triples. Independent enums on name / since / enabler would accept invalid combinations, so each namespace is pinned as a whole quadruple (name + since + enabler + capability). The capability string ties negotiation to the shared capabilities enum so status.extensions and status.capabilities cannot drift.",
      "oneOf": [
        {
          "type": "object",
          "additionalProperties": false,
          "required": ["name", "x-cairn-since", "enabler", "x-cairn-capability"],
          "properties": {
            "name":                { "const": "cairn.aggregate.v1" },
            "x-cairn-since":       { "const": "v0.2" },
            "enabler":             { "const": "agent.enable_aggregate" },
            "x-cairn-capability":  { "const": "cairn.mcp.v1.extension.aggregate" }
          }
        },
        {
          "type": "object",
          "additionalProperties": false,
          "required": ["name", "x-cairn-since", "enabler", "x-cairn-capability"],
          "properties": {
            "name":                { "const": "cairn.admin.v1" },
            "x-cairn-since":       { "const": "v0.1" },
            "enabler":             { "const": "operator role" },
            "x-cairn-capability":  { "const": "cairn.mcp.v1.extension.admin" }
          }
        },
        {
          "type": "object",
          "additionalProperties": false,
          "required": ["name", "x-cairn-since", "enabler", "x-cairn-capability"],
          "properties": {
            "name":                { "const": "cairn.federation.v1" },
            "x-cairn-since":       { "const": "v0.3" },
            "enabler":             { "const": "enterprise deployment" },
            "x-cairn-capability":  { "const": "cairn.mcp.v1.extension.federation" }
          }
        },
        {
          "type": "object",
          "additionalProperties": false,
          "required": ["name", "x-cairn-since", "enabler", "x-cairn-capability"],
          "properties": {
            "name":                { "const": "cairn.sessiontree.v1" },
            "x-cairn-since":       { "const": "v0.3" },
            "enabler":             { "const": "session.enable_tree" },
            "x-cairn-capability":  { "const": "cairn.mcp.v1.extension.sessiontree" }
          }
        }
      ]
    },
    "known": {
      "description": "The four planned extensions at P0 — carried as literal values so codegen can emit an enum without re-walking the $defs.namespace schema.",
      "type": "array",
      "items": { "$ref": "#/$defs/namespace" },
      "x-cairn-values": [
        { "name": "cairn.aggregate.v1",   "x-cairn-since": "v0.2", "enabler": "agent.enable_aggregate",  "x-cairn-capability": "cairn.mcp.v1.extension.aggregate" },
        { "name": "cairn.admin.v1",       "x-cairn-since": "v0.1", "enabler": "operator role",           "x-cairn-capability": "cairn.mcp.v1.extension.admin" },
        { "name": "cairn.federation.v1",  "x-cairn-since": "v0.3", "enabler": "enterprise deployment",   "x-cairn-capability": "cairn.mcp.v1.extension.federation" },
        { "name": "cairn.sessiontree.v1", "x-cairn-since": "v0.3", "enabler": "session.enable_tree",     "x-cairn-capability": "cairn.mcp.v1.extension.sessiontree" }
      ]
    }
  }
}
