crates/cairn-idl/tests/snapshots/wire_compat_v1__file__prelude_handshake_json.snap
---
source: crates/cairn-idl/tests/wire_compat_v1.rs
expression: body
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "$id": "https://cairn.dev/schema/cairn.mcp.v1/prelude/handshake.json",
  "title": "Cairn handshake response",
  "x-cairn-contract": "cairn.mcp.v1",
  "type": "object",
  "additionalProperties": false,
  "required": ["contract", "challenge"],
  "properties": {
    "contract": { "const": "cairn.mcp.v1" },
    "challenge": {
      "type": "object",
      "additionalProperties": false,
      "required": ["nonce", "expires_at"],
      "properties": {
        "nonce": {
          "allOf": [{ "$ref": "../common/primitives.json#/$defs/Nonce16Base64" }],
          "description": "Fresh 16-byte nonce; single-use; stored in outstanding_challenges. This is the same shape clients later place into signed_intent.server_challenge."
        },
        "expires_at": {
          "type": "integer",
          "minimum": 0,
          "description": "Unix epoch milliseconds; default TTL 60 s."
        }
      }
    }
  }
}
